--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# Set to production when deploying
-NODE_ENV=production
+# Set to production when deploying otherwise comment out
+#NODE_ENV=production
 
 PORT=8000
 
